Добавьте файлы проекта.

--- a/MyCompany62/Areas/Admin/Views/ServiceItems/Edit.cshtml
+++ b/MyCompany62/Areas/Admin/Views/ServiceItems/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = strTitle;
 }
 
-<script src="~/js/ckeditor/ckeditor.js"></script>
+<script src="~/js/ckeditor4/ckeditor.js"></script>
 
 <div>
     <h2>@strTitle</h2>
